# bloom

./: .gitignore  .pre-commit-config.yaml  ROADMAP.md  main.db  pyproject.toml  ruff.toml
bloom/: __init__.py
bloom/domain/: __init__.py  aggregates.py  value_objects.py
bloom/events/: __init__.py  event_bus.py  events.py
bloom/parijata/: __init__.py  events.py
bloom/prajnan/: __init__.py  repositories.py  uow.py
bloom/redbird/: sqlrepo.py
bloom/repositories/: __init__.py  abc.py  memory.py  protocols.py  sqla.py
bloom/sara/: __init__.py  aggregates.py  entities.py  mixins.py  value_objects.py
bloom/service_layer/: __init__.py  uow.py
tests/: conftest.py  models.py  test_api.py  test_model.py  test_models.py  test_repositories.py  test_repository.py  test_services.py  test_value_objects.py
tests/api/: test_api.py
tests/app/: repositories.py
tests/app/adapters/: orm.py  repositories.py
tests/app/domain/: errors.py  events.py  model.py
tests/app/entrypoints/: api.py
tests/app/service_layer/: services.py  unit_of_work.py
tests/domain/: test_models.py  test_value_objects.py
tests/events/: test_async_event_bus.py
tests/example/adapters/: orm.py
tests/example/app/adapters/: orm.py
tests/example/app/domain/: model.py
tests/example/app/entrypoints/: api.py
tests/example/app/service_layer/: services.py  unit_of_work.py
tests/example/domain/: model.py
tests/example/entrypoints/: api.py
tests/example/service_layer/: services.py  unit_of_work.py
tests/example/tests/: test_models.py  test_repositories.py  test_services.py
tests/examples/: models.py  test_model.py
tests/model/: __init__.py  models.py  orm.py
tests/repositories/: test_repositories.py
tests/sara/: test_value_objects.py
tests/service_layer/: test_services.py
